0.14
 - Update Module::Install to 1.21 version.
 - Update copyright years.
 - Update minimal dependency of File::Object.

0.13 2022-12-10T16:20:05+01:00
 - Add test for sections() with two example sections.
 - Support '-' in example names.

0.12 2022-07-31T23:34:46+02:00
 - Add names for examples.
 - Add support for definition of example filename in doc defined by POD
   comment.
 - Move issues to Github.
 - Update copyright years.

0.11 2020-03-06T09:42:33+01:00
 - Add test for documentation from .pod file.
 - Fix detecting of sections.
 - We don't need to load module to detect documentation in it. In tests.

0.10 2020-02-28T13:57:54+01:00
 - Rewrite from usage of Module::Info to Pod::Find. Resolves issue with
   looking POD documentation in .pod files.

0.09 2020-02-02T18:44:41+01:00
 - Add test for sections subroutine.
 - Change =item to =head2 in METHODS section in doc.
 - Fix Makefile.PL fails with no '.' in @INC.
 - Remove trivial comments.
 - Update Module::Install readme_from.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.08 2015-10-14T11:21:19+02:00
 - Add SEE ALSO section to doc.
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.07 2014-12-22T01:14:11+01:00
 - Fix LICENSE file.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Process =begin text ... =end section from examples.
 - Remove =begin html ... =end section from examples.
 - Update Module::Install to 1.14 version.

0.06 2014-08-01T10:21:00+02:00
 - Fix ERRORS section in doc.
 - Improve doc.
 - Update Module::Install to 1.10 version.

0.05 2013-11-12
 - Add 'readme_from' directive to Makefile.PL.
 - Add LICENSE.
 - Add dependency for perl (based on Error::Pure).

0.04 2013-09-21
 - Add SIGNATURE.
 - Add Test::NoWarnings to tests.
 - Rename CHANGES to Changes.
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.03 2012-07-16