@@ -1,4 +1,5 @@
 0.14
+ - Add test for parse example with pod comment.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
  - Update minimal dependency of File::Object.
